remove web archive things
thanks to web archive for the backup :)

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<meta name="Robots" content="All"/>
 		<meta name="Revisit-after" content="10"/>
 		<meta http-equiv="Pragma" content="no-cache"/>
-		<link rel="shortcut icon" href="https://web.archive.org/web/20081113213936im_/http://chakhal.free.fr/fav.ico"/>
+		<link rel="shortcut icon" href="./inc/fav.ico"/>
 		<link rel="stylesheet" type="text/css" href="./inc/default_design.css"/>
 		<link rel="stylesheet" type="text/css" href="./inc/kata.css"/>
-		<script type="text/javascript" src="https://web.archive.org/web/20081113213936js_/http://chakhal.free.fr/script/default.js"></script>
+		<script type="text/javascript" src=""></script>
 		<title>Le site des Chakhos - Katas</title>
 	</head>
 	<body id="haut_page">
@@ -23,12 +23,12 @@
 		<div id="en_tete">
 			<div class="content">
 				<h1 id="titre">
-				<img id="logo_site" alt="Chakhâl" src="https://web.archive.org/web/20081113213936im_/http://chakhal.free.fr/image/logo_site.gif"/>
+				<img id="logo_site" alt="Chakhâl" src="./inc/logo_site.gif"/>
 				Le site des Chakhos
 				</h1>
 				<h2 id="sous_titre">
 				Katas
-				    <img id="picto" alt="" src="https://web.archive.org/web/20081113213936im_/http://chakhal.free.fr/image/picto_kata.gif"/>
+				    <img id="picto" alt="" src="./inc/picto_kata.gif"/>
                 				</h2>
 				<hr class="spacer"/>
 			</div>
@@ -199,7 +199,7 @@ Sinon, je recommande le (très complet et richement illustré) livre de Patrick 
 
 <div class="article">
 	<h3 id="cool_piscine">La piscine</h3>
-	<img src="https://web.archive.org/web/20081113213936im_/http://chakhal.free.fr/image/kta_piscine.gif" alt="On pique une tête?"/>
+	<img src="./inc/kta_piscine.gif" alt="On pique une tête?"/>
 	<p class="first_p">Sans aucun doute possible, j'affirme que c'est le coin le plus humide des katacombes.</p>
 	<p>Il ne s'agit pas à proprement parler d'une salle non plus mais plutôt d'un groupe de galeries innondées. L'eau est un peu fraîche mais on peut quand même s'y baigner (un jour, j'avais vu sur un page internet qu'il y avait une webcam dans les katas). Je ne l'ai bien sûr jamais trouvée mais je suis convaincu qu'elle se trouve au bout d'une de ces galeries...</p>
 	<p>A l'entrée, le niveau est assez bas (jusqu'à la taille), on peut donc parler de petit bassin. On arrive progressivement au grand bassin où l'eau peut atteindre le plafond. Pierre qui a pris la photo m'a avoué qu'il avait bien rigolé et qu'il m'avait fait pipi dessus (c'était la soirée que j'évoquais dans la présentation de la salle du dragon)</p>
@@ -215,7 +215,7 @@ Sinon, je recommande le (très complet et richement illustré) livre de Patrick 
 
 <div class="article">
 	<h3 id="cool_chandelier">La salle du chandelier</h3>
-	<img src="https://web.archive.org/web/20081113213936im_/http://chakhal.free.fr/image/kta_chandelier.gif" alt="La salle du chandelier"/>
+	<img src="./inc/kta_chandelier.gif" alt="La salle du chandelier"/>
 	<p class="first_p">Là, c'est une vrai salle. Quoiqu'il est vrai qu'on pourrait dire qu'il s'agit de l'élargissement d'une galerie... Ne nous écartons quand même pas trop du sujet.</p>
 	<p>Cette salle est située dans la zone de Denfert-Rocherau, sous de nombreux puits d'ossements. Dans cette zone, on peut trouver par ci par là un trou ou un escalier vers le deuxième sous-sol (donc attention au crâne mais aussi aux pieds...)</p>
 	<p>On peut sans trop d'inquiètude se lancer dans ce réseau sousouterrain sans plan car ce ne sont pas les carrefours qui vous ralentiront ici. C'est dans ces quelques galeries notamment qu'il est drôle de s'adonner au loisir du petit train</p>
@@ -238,7 +238,7 @@ Sinon, je recommande le (très complet et richement illustré) livre de Patrick 
 
 <div class="article">
 	<h3 id="cool_z">La salle Z</h3>
-	<img src="https://web.archive.org/web/20081113213936im_/http://chakhal.free.fr/image/kta_z.gif" alt="La mythique salle Z"/>
+	<img src="./inc/kta_z.gif" alt="La mythique salle Z"/>
 	<p class="first_p">Une salle mythique car elle hébergeait les très grosses soirées qui se déroulaient sous terre dans les années 70 (j'ai déjà lu des articles qui parlaient de plusieurs centaines de personnes). Elle tient son nom du fait que c'est la dernière grande salle que l'on peut trouver si on continue toujours vers le nord.</p>
 	<p>Donc en gros, ca se mérite. Je crois que si on n'est pas trop nombreux, qu'on ne fait pas d'arrêt et qu'on se presse un minimum, il faut quasiment une heure pour aller du sud jusqu'à Z (interessant n'est-ce-pas?)</p>
 	<hr class="spacer"/>
@@ -250,7 +250,7 @@ Sinon, je recommande le (très complet et richement illustré) livre de Patrick 
 
 <div class="article">
 	<h3 id="cool_bunker">Le bunker allemand</h3>
-	<img src="https://web.archive.org/web/20081113213936im_/http://chakhal.free.fr/image/kta_bunker.gif" alt="Le malsain bunker allemand"/>
+	<img src="./inc/kta_bunker.gif" alt="Le malsain bunker allemand"/>
 	<p class="first_p"></p>
 	<hr class="spacer"/>
 </div>
@@ -261,7 +261,7 @@ Sinon, je recommande le (très complet et richement illustré) livre de Patrick 
 
 <div class="article">
 	<h3 id="cool_flic">Y'a des flics cools aussi</h3>
-	<img src="https://web.archive.org/web/20081113213936im_/http://chakhal.free.fr/image/kta_flic.gif" alt="Un flic facetté"/>
+	<img src="./inc/kta_flic.gif" alt="Un flic facetté"/>
 	<p class="first_p"></p>
 	<hr class="spacer"/>
 </div>
