--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 		<meta name="Author" lang="fr" content="MasterOfChakhal"/>
 		<meta name="Reply-to" content="master@chakhal.vip"/>
+		<meta name="google-site-verification" content="zbM23GDyI3QNeJsnIE5VUdLZP-dYflfmmDmoKqcpsLE" />
 		<meta name="Description" content="Site perso qui parle des chakhos, une drôle de communauté..."/>
 		<meta name="Keywords" content="chakhal, chakhos, roller, quad, kata, kta, squat, ouferie, création"/>
 		<meta name="Indentifier-URL" content="http://chakhal.free.fr/"/>
